namespace QuinntyneBrownStewardship.Application.Access;

public sealed record SessionResponse(string EmailAddress);
